# yiot-apps

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_android.sh  transitive-args.cmake
common/: CMakeLists.txt
common/config/pc/: endian-config.h  logger-config.h
common/protocols/snap/: CMakeLists.txt
common/qos1/: CMakeLists.txt
common/qos1/include/qos1/: resend-container.h
common/qos1/src/: resend-container.cpp
controll-app/: CMakeLists.txt
controll-app/cmake/iotkit-qt/: CMakeLists.txt
controll-app/devices/emulator-lamp/: device-emulator-lamp.qrc
controll-app/devices/rpi/js/: pc.js
controll-app/extensions/devices/emulator-lamp/: device.qrc
controll-app/extensions/devices/rpi/: device.qrc  info.json
controll-app/extensions/integrations/websocket/: info.json  integration.qrc
controll-app/extensions/plugins/rpi-vpn/: info.json  plugin.qrc
controll-app/include/: KSQApplication.h  KSQBLEController.h  KSQWiFiEnumerator.h  KSWiFi.h
controll-app/include/android/: KSQAndroid.h
controll-app/include/controllers/: KSQAllDevicesController.h  KSQBLEController.h  KSQBlankDevicesController.h  KSQDevice.h  KSQDevicesType.h  KSQUXSimplifyController.h
controll-app/include/controllers/devices/: KSQAllDevicesController.h  KSQControllerBase.h  KSQDevice.h  KSQDevices.h  KSQDevicesType.h
controll-app/include/controllers/extensions/: KSQExtensionControllerBase.h  KSQExtensions.h  KSQOneExtension.h
controll-app/include/controllers/integrations/: KSQIntegrationsController.h
controll-app/include/controllers/plugins/: KSQPluginsController.h
controll-app/include/devices/: KSQBlankDevicesController.h  KSQControllerBase.h  KSQDeviceBase.h  KSQDevices.h
controll-app/include/devices/lamp/: KSQLamp.h  KSQLampController.h
controll-app/include/devices/pc/: KSQPC.h  KSQPCController.h
controll-app/include/os/android/: KSQAndroid.h
controll-app/include/utils/: KSQFileLoader.h
controll-app/include/yiot-iotkit/: KSQFeatures.h  KSQIoTKitFacade.h
controll-app/include/yiot-iotkit/netif/: KSQNetifWebsocket.h  KSQUdp.h
controll-app/include/yiot-iotkit/provision/: KSQProvision.h
controll-app/include/yiot-iotkit/root-of-trust/: KSQPrivateKey.h  KSQRoT.h  KSQRoTController.h  KSQSignature.h  KSQTrustList.h
controll-app/include/yiot-iotkit/secbox/: KSQSecBox.h
controll-app/include/yiot-iotkit/secmodule/: KSQKeyPair.h  KSQPrivateKey.h  KSQPublicKey.h  KSQSecModule.h  KSQSessionKey.h
controll-app/include/yiot-iotkit/setup/: KSQDeviceSetupController.h  KSQDeviceSetupData.h
controll-app/include/yiot-iotkit/snap/: KSQSnapLampClient.h  KSQSnapPCClient.h  KSQSnapPRVSClient.h  KSQSnapSCRTClient.h  KSQSnapUSERClient.h
controll-app/include/yiot-iotkit/storages/: KSQStorageBase.h  KSQStorageFS.h  KSQStorageKeychain.h
controll-app/src/: KSQApplication.cpp  KSQBLEController.cpp  KSQWiFiEnumerator.cpp  iotkit-hal.cpp  main.cpp  resources.qrc  yiot_plugin_import.cpp  yiot_qml_plugin_import.cpp
controll-app/src/android/: KSQAndroid.cpp
controll-app/src/controllers/: KSQAllDevicesController.cpp  KSQBLEController.cpp  KSQBlankDevicesController.cpp  KSQDevice.cpp  KSQDevicesType.cpp  KSQUXSimplifyController.cpp
controll-app/src/controllers/devices/: KSQAllDevicesController.cpp  KSQControllerBase.cpp  KSQDevice.cpp  KSQDeviceBase.cpp  KSQDevices.cpp  KSQDevicesType.cpp
controll-app/src/controllers/extensions/: KSQExtensions.cpp  KSQOneExtension.cpp
controll-app/src/controllers/integrations/: KSQIntegrationsController.cpp
controll-app/src/controllers/plugins/: KSQPluginsController.cpp
controll-app/src/devices/: KSQBlankDevicesController.cpp  KSQControllerBase.cpp  KSQDeviceBase.cpp  KSQDevices.cpp
controll-app/src/devices/lamp/: KSQLamp.cpp  KSQLampController.cpp
controll-app/src/devices/pc/: KSQPC.cpp  KSQPCController.cpp
controll-app/src/js/configuration/: protocol.js
controll-app/src/js/devices/: pc.js
controll-app/src/js/firmware/: protocol.js
controll-app/src/js/uci/: params-types.js  params.js  protocol.js
controll-app/src/linux/: KSLinuxWiFi.cpp
controll-app/src/os/android/: KSQAndroid.cpp
controll-app/src/os/ios/: KSiOSHelpers.h  KSiOSHelpers.mm  KSiOSWiFi.mm  KSiOSWiFiObjC.h  KSiOSWiFiObjC.m  KSiOSWiFiSSID.h  KSiOSWiFiSSID.m
controll-app/src/os/linux/: KSLinuxWiFi.cpp
controll-app/src/os/macos/: KSMacWiFi.mm
controll-app/src/os/win/: KSWinWiFi.cpp
controll-app/src/qml/: Main.qml
controll-app/src/qml/base/: Platform.qml
controll-app/src/qml/components/: AppStatus.qml  Container.qml  DoersTypeList.qml  Form.qml  FormComboBox.qml  FormDoers.qml  FormImage.qml  FormInput.qml  FormLabel.qml  FormPrimaryButton.qml  FormSecondaryButton.qml  FormThemeList.qml  FormVendor.qml  Header.qml  ImageButton.qml  InfoText.qml  InputTextField.qml  LinkText.qml  MainTabButton.qml  MenuListView.qml  Password.qml  SettingsButton.qml  SettingsStorage.qml  SwitchableParam.qml  TextScrollView.qml  TextTabButton.qml  Title.qml  WiFiNetworksList.qml
controll-app/src/qml/doers/: Contributors.qml  Sponsors.qml
controll-app/src/qml/info/: builtin-devices.json  builtin-integrations.json  builtin-plugins.json
controll-app/src/qml/pages/: AboutPage.qml  CredLoadPage.qml  DevicesPage.qml  DevicesSetupPage.qml  IntegrationsPage.qml  LeftSideMenu.qml  PluginPage.qml  QRReaderPage.qml  SettingsPage.qml  SharePage.qml
controll-app/src/qml/theme/: Theme.qml
controll-app/src/translations/: yiot_ru.qm  yiot_ru.ts  yiot_ua.qm  yiot_ua.ts
controll-app/src/ui/: VSQUiHelper.cpp
controll-app/src/utils/: KSQFileLoader.cpp
controll-app/src/win/: KSWinWiFi.cpp
controll-app/src/yiot-iotkit/: KSQIoTKitFacade.cpp
controll-app/src/yiot-iotkit/netif/: KSQNetifWebsocket.cpp  KSQUdp.cpp
controll-app/src/yiot-iotkit/provision/: KSQProvision.cpp
device-app/: CMakeLists.txt
device-app/main/: CMakeLists.txt
device-app/main/emulator/: CMakeLists.txt
device-app/main/linux/: CMakeLists.txt
device-app/provision/: CMakeLists.txt
service/: CMakeLists.txt
service/linux/: CMakeLists.txt
service/linux/src/: helpers.c  main.c
src/: main.c
(+270 files in other folders)
